<resources>
    <string name="app_name">PracticalTest02</string>
    <string name="server">SERVER</string>
    <string name="serverPort">port</string>
    <string name="serverConnectBtn">Connect</string>
    <string name="client">CLIENT</string>
    <string name="addressClient">Address</string>
    <string name="portClient">port</string>
    <string name="city">City</string>
    <string name="getWeatherBtn">Get Weather forecst</string>
    <string name="word">word</string>
    <string name="getWord">Get</string>
</resources>
